# ParaLog

./: .gitignore  CMakeLists.txt  README.md  build.ps1  run_guide.md
benchmarks/: README.md
gui/: AnalysisJob.cpp  AnalysisJob.h  AppState.h  CMakeLists.txt  GuiRenderer.cpp  GuiRenderer.h  ResultsParser.cpp  ResultsParser.h  StyleSheet.h  main_gui.cpp
include/: ComparisonRunner.h  LogAnalyzer.h  LogReader.h  ResultCache.h
src/: ComparisonRunner.cpp  LogAnalyzer.cpp  LogReader.cpp  ResultCache.cpp  main.cpp
